# serializer version: 1
# name: test_get_intersecting_entries[size=01 h=00 m=00]
  list([
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220901_235016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 1, 23, 50, 16), end=datetime.datetime(2022, 9, 2, 0, 0, 16)), start_secs=584, duration_secs=16),
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220902_000016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 0, 16), end=datetime.datetime(2022, 9, 2, 0, 10, 16)), start_secs=0, duration_secs=44),
  ])
# ---
# name: test_get_intersecting_entries[size=01 h=23 m=59]
  list([
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220902_235016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 50, 16), end=datetime.datetime(2022, 9, 3, 0, 0, 16)), start_secs=524, duration_secs=60),
  ])
# ---
# name: test_get_intersecting_entries[size=10 h=23 m=40]
  list([
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220902_233016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 30, 16), end=datetime.datetime(2022, 9, 2, 23, 40, 16)), start_secs=584, duration_secs=16),
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220902_234016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 40, 16), end=datetime.datetime(2022, 9, 2, 23, 50, 16)), start_secs=0, duration_secs=584),
  ])
# ---
# name: test_get_intersecting_entries[size=20 h=00 m=00]
  list([
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220901_235016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 1, 23, 50, 16), end=datetime.datetime(2022, 9, 2, 0, 0, 16)), start_secs=584, duration_secs=16),
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220902_000016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 0, 16), end=datetime.datetime(2022, 9, 2, 0, 10, 16)), start_secs=0, duration_secs=600),
    TMEIntersection(tme=TME(path='/PAM_Archive/2022/09/MARS_20220902_001016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 10, 16), end=datetime.datetime(2022, 9, 2, 0, 20, 16)), start_secs=0, duration_secs=584),
  ])
# ---
# name: test_json_parsing
  list([
    TME(path='/PAM_Archive/2022/09/MARS_20220901_235016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 1, 23, 50, 16), end=datetime.datetime(2022, 9, 2, 0, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_000016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 0, 16), end=datetime.datetime(2022, 9, 2, 0, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_001016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 10, 16), end=datetime.datetime(2022, 9, 2, 0, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_002016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 20, 16), end=datetime.datetime(2022, 9, 2, 0, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_003016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 30, 16), end=datetime.datetime(2022, 9, 2, 0, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_004016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 40, 16), end=datetime.datetime(2022, 9, 2, 0, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_005016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 0, 50, 16), end=datetime.datetime(2022, 9, 2, 1, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_010016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 1, 0, 16), end=datetime.datetime(2022, 9, 2, 1, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_011016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 1, 10, 16), end=datetime.datetime(2022, 9, 2, 1, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_012016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 1, 20, 16), end=datetime.datetime(2022, 9, 2, 1, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_013016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 1, 30, 16), end=datetime.datetime(2022, 9, 2, 1, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_014016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 1, 40, 16), end=datetime.datetime(2022, 9, 2, 1, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_015016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 1, 50, 16), end=datetime.datetime(2022, 9, 2, 2, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_020016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 2, 0, 16), end=datetime.datetime(2022, 9, 2, 2, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_021016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 2, 10, 16), end=datetime.datetime(2022, 9, 2, 2, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_022016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 2, 20, 16), end=datetime.datetime(2022, 9, 2, 2, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_023016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 2, 30, 16), end=datetime.datetime(2022, 9, 2, 2, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_024016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 2, 40, 16), end=datetime.datetime(2022, 9, 2, 2, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_025016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 2, 50, 16), end=datetime.datetime(2022, 9, 2, 3, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_030016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 3, 0, 16), end=datetime.datetime(2022, 9, 2, 3, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_031016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 3, 10, 16), end=datetime.datetime(2022, 9, 2, 3, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_032016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 3, 20, 16), end=datetime.datetime(2022, 9, 2, 3, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_033016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 3, 30, 16), end=datetime.datetime(2022, 9, 2, 3, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_034016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 3, 40, 16), end=datetime.datetime(2022, 9, 2, 3, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_035016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 3, 50, 16), end=datetime.datetime(2022, 9, 2, 4, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_040016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 4, 0, 16), end=datetime.datetime(2022, 9, 2, 4, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_041016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 4, 10, 16), end=datetime.datetime(2022, 9, 2, 4, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_042016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 4, 20, 16), end=datetime.datetime(2022, 9, 2, 4, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_043016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 4, 30, 16), end=datetime.datetime(2022, 9, 2, 4, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_044016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 4, 40, 16), end=datetime.datetime(2022, 9, 2, 4, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_045016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 4, 50, 16), end=datetime.datetime(2022, 9, 2, 5, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_050016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 5, 0, 16), end=datetime.datetime(2022, 9, 2, 5, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_051016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 5, 10, 16), end=datetime.datetime(2022, 9, 2, 5, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_052016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 5, 20, 16), end=datetime.datetime(2022, 9, 2, 5, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_053016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 5, 30, 16), end=datetime.datetime(2022, 9, 2, 5, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_054016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 5, 40, 16), end=datetime.datetime(2022, 9, 2, 5, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_055016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 5, 50, 16), end=datetime.datetime(2022, 9, 2, 6, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_060016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 6, 0, 16), end=datetime.datetime(2022, 9, 2, 6, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_061016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 6, 10, 16), end=datetime.datetime(2022, 9, 2, 6, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_062016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 6, 20, 16), end=datetime.datetime(2022, 9, 2, 6, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_063016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 6, 30, 16), end=datetime.datetime(2022, 9, 2, 6, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_064016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 6, 40, 16), end=datetime.datetime(2022, 9, 2, 6, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_065016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 6, 50, 16), end=datetime.datetime(2022, 9, 2, 7, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_070016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 7, 0, 16), end=datetime.datetime(2022, 9, 2, 7, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_071016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 7, 10, 16), end=datetime.datetime(2022, 9, 2, 7, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_072016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 7, 20, 16), end=datetime.datetime(2022, 9, 2, 7, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_073016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 7, 30, 16), end=datetime.datetime(2022, 9, 2, 7, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_074016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 7, 40, 16), end=datetime.datetime(2022, 9, 2, 7, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_075016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 7, 50, 16), end=datetime.datetime(2022, 9, 2, 8, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_080016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 8, 0, 16), end=datetime.datetime(2022, 9, 2, 8, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_081016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 8, 10, 16), end=datetime.datetime(2022, 9, 2, 8, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_082016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 8, 20, 16), end=datetime.datetime(2022, 9, 2, 8, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_083016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 8, 30, 16), end=datetime.datetime(2022, 9, 2, 8, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_084016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 8, 40, 16), end=datetime.datetime(2022, 9, 2, 8, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_085016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 8, 50, 16), end=datetime.datetime(2022, 9, 2, 9, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_090016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 9, 0, 16), end=datetime.datetime(2022, 9, 2, 9, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_091016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 9, 10, 16), end=datetime.datetime(2022, 9, 2, 9, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_092016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 9, 20, 16), end=datetime.datetime(2022, 9, 2, 9, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_093016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 9, 30, 16), end=datetime.datetime(2022, 9, 2, 9, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_094016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 9, 40, 16), end=datetime.datetime(2022, 9, 2, 9, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_095016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 9, 50, 16), end=datetime.datetime(2022, 9, 2, 10, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_100016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 10, 0, 16), end=datetime.datetime(2022, 9, 2, 10, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_101016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 10, 10, 16), end=datetime.datetime(2022, 9, 2, 10, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_102016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 10, 20, 16), end=datetime.datetime(2022, 9, 2, 10, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_103016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 10, 30, 16), end=datetime.datetime(2022, 9, 2, 10, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_104016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 10, 40, 16), end=datetime.datetime(2022, 9, 2, 10, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_105016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 10, 50, 16), end=datetime.datetime(2022, 9, 2, 11, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_110016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 11, 0, 16), end=datetime.datetime(2022, 9, 2, 11, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_111016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 11, 10, 16), end=datetime.datetime(2022, 9, 2, 11, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_112016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 11, 20, 16), end=datetime.datetime(2022, 9, 2, 11, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_113016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 11, 30, 16), end=datetime.datetime(2022, 9, 2, 11, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_114016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 11, 40, 16), end=datetime.datetime(2022, 9, 2, 11, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_115016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 11, 50, 16), end=datetime.datetime(2022, 9, 2, 12, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_120016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 12, 0, 16), end=datetime.datetime(2022, 9, 2, 12, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_121016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 12, 10, 16), end=datetime.datetime(2022, 9, 2, 12, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_122016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 12, 20, 16), end=datetime.datetime(2022, 9, 2, 12, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_123016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 12, 30, 16), end=datetime.datetime(2022, 9, 2, 12, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_124016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 12, 40, 16), end=datetime.datetime(2022, 9, 2, 12, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_125016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 12, 50, 16), end=datetime.datetime(2022, 9, 2, 13, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_130016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 13, 0, 16), end=datetime.datetime(2022, 9, 2, 13, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_131016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 13, 10, 16), end=datetime.datetime(2022, 9, 2, 13, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_132016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 13, 20, 16), end=datetime.datetime(2022, 9, 2, 13, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_133016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 13, 30, 16), end=datetime.datetime(2022, 9, 2, 13, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_134016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 13, 40, 16), end=datetime.datetime(2022, 9, 2, 13, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_135016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 13, 50, 16), end=datetime.datetime(2022, 9, 2, 14, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_140016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 14, 0, 16), end=datetime.datetime(2022, 9, 2, 14, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_141016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 14, 10, 16), end=datetime.datetime(2022, 9, 2, 14, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_142016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 14, 20, 16), end=datetime.datetime(2022, 9, 2, 14, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_143016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 14, 30, 16), end=datetime.datetime(2022, 9, 2, 14, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_144016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 14, 40, 16), end=datetime.datetime(2022, 9, 2, 14, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_145016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 14, 50, 16), end=datetime.datetime(2022, 9, 2, 15, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_150016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 15, 0, 16), end=datetime.datetime(2022, 9, 2, 15, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_151016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 15, 10, 16), end=datetime.datetime(2022, 9, 2, 15, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_152016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 15, 20, 16), end=datetime.datetime(2022, 9, 2, 15, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_153016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 15, 30, 16), end=datetime.datetime(2022, 9, 2, 15, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_154016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 15, 40, 16), end=datetime.datetime(2022, 9, 2, 15, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_155016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 15, 50, 16), end=datetime.datetime(2022, 9, 2, 16, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_160016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 16, 0, 16), end=datetime.datetime(2022, 9, 2, 16, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_161016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 16, 10, 16), end=datetime.datetime(2022, 9, 2, 16, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_162016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 16, 20, 16), end=datetime.datetime(2022, 9, 2, 16, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_163016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 16, 30, 16), end=datetime.datetime(2022, 9, 2, 16, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_164016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 16, 40, 16), end=datetime.datetime(2022, 9, 2, 16, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_165016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 16, 50, 16), end=datetime.datetime(2022, 9, 2, 17, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_170016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 17, 0, 16), end=datetime.datetime(2022, 9, 2, 17, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_171016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 17, 10, 16), end=datetime.datetime(2022, 9, 2, 17, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_172016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 17, 20, 16), end=datetime.datetime(2022, 9, 2, 17, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_173016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 17, 30, 16), end=datetime.datetime(2022, 9, 2, 17, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_174016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 17, 40, 16), end=datetime.datetime(2022, 9, 2, 17, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_175016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 17, 50, 16), end=datetime.datetime(2022, 9, 2, 18, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_180016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 18, 0, 16), end=datetime.datetime(2022, 9, 2, 18, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_181016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 18, 10, 16), end=datetime.datetime(2022, 9, 2, 18, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_182016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 18, 20, 16), end=datetime.datetime(2022, 9, 2, 18, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_183016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 18, 30, 16), end=datetime.datetime(2022, 9, 2, 18, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_184016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 18, 40, 16), end=datetime.datetime(2022, 9, 2, 18, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_185016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 18, 50, 16), end=datetime.datetime(2022, 9, 2, 19, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_190016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 19, 0, 16), end=datetime.datetime(2022, 9, 2, 19, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_191016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 19, 10, 16), end=datetime.datetime(2022, 9, 2, 19, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_192016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 19, 20, 16), end=datetime.datetime(2022, 9, 2, 19, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_193016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 19, 30, 16), end=datetime.datetime(2022, 9, 2, 19, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_194016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 19, 40, 16), end=datetime.datetime(2022, 9, 2, 19, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_195016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 19, 50, 16), end=datetime.datetime(2022, 9, 2, 20, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_200016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 20, 0, 16), end=datetime.datetime(2022, 9, 2, 20, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_201016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 20, 10, 16), end=datetime.datetime(2022, 9, 2, 20, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_202016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 20, 20, 16), end=datetime.datetime(2022, 9, 2, 20, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_203016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 20, 30, 16), end=datetime.datetime(2022, 9, 2, 20, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_204016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 20, 40, 16), end=datetime.datetime(2022, 9, 2, 20, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_205016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 20, 50, 16), end=datetime.datetime(2022, 9, 2, 21, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_210016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 21, 0, 16), end=datetime.datetime(2022, 9, 2, 21, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_211016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 21, 10, 16), end=datetime.datetime(2022, 9, 2, 21, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_212016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 21, 20, 16), end=datetime.datetime(2022, 9, 2, 21, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_213016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 21, 30, 16), end=datetime.datetime(2022, 9, 2, 21, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_214016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 21, 40, 16), end=datetime.datetime(2022, 9, 2, 21, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_215016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 21, 50, 16), end=datetime.datetime(2022, 9, 2, 22, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_220016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 22, 0, 16), end=datetime.datetime(2022, 9, 2, 22, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_221016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 22, 10, 16), end=datetime.datetime(2022, 9, 2, 22, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_222016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 22, 20, 16), end=datetime.datetime(2022, 9, 2, 22, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_223016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 22, 30, 16), end=datetime.datetime(2022, 9, 2, 22, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_224016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 22, 40, 16), end=datetime.datetime(2022, 9, 2, 22, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_225016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 22, 50, 16), end=datetime.datetime(2022, 9, 2, 23, 0, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_230016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 0, 16), end=datetime.datetime(2022, 9, 2, 23, 10, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_231016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 10, 16), end=datetime.datetime(2022, 9, 2, 23, 20, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_232016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 20, 16), end=datetime.datetime(2022, 9, 2, 23, 30, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_233016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 30, 16), end=datetime.datetime(2022, 9, 2, 23, 40, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_234016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 40, 16), end=datetime.datetime(2022, 9, 2, 23, 50, 16)),
    TME(path='/PAM_Archive/2022/09/MARS_20220902_235016.wav', duration_secs=600.0, start=datetime.datetime(2022, 9, 2, 23, 50, 16), end=datetime.datetime(2022, 9, 3, 0, 0, 16)),
  ])
# ---
